2008-04-17 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c:
	* src/mt-cusor-manager.c:
	Handle cursor theme changes correctly.

2008-04-06 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-timer.c: Remove unused variables.
	* src/mt-main.c: Don't send right-clicks too fast. This helps
	to avoid running into active pointer grabs. (eg. gnome-panel)

2008-03-30 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/Makefile.am: LDFLAGS -> LDADD.
	Make sure "-Wl,--as-needed" gets a front row seat. Fixes bug #525032.

2008-03-29 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/dwell-click-applet.c: Use new 'show-page' option of mouse capplet.

2008-03-29 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-cusor.c/h: Initial commit.
	* src/mt-cusor-manager.c/h: Initial commit.
	* src/Makefile.am: Add new cursor files.
	* src/mt-main.c/h: Use new objects. Add cursor drawing code.
	* src/mt-common.h: New animate_cursor option.
	* data/mousetwaks.schemas.in: New animate_cursor option.

	Add cursor animation to give visual feedback for the internal
	state of the timers. For dwell-click this means - how long the 
	cursor has been motionless, for secondary clicks - how long the
	primary button has been pressed.
	
2008-03-28 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: Check gconf value types before using them.

2008-03-28 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-timer.c: Add new 'tick' signal. Remove properties.
	* src/mt-timer.h: Clean up.
	* src/mt-main.c: Use changed function name.

2008-03-27 Gerd Kohlberger <gerdk@svn.gnome.org>

	* po/POTFILES.in: Remove deleted mt-dbus.c file.

2008-03-27 Gerd Kohlberger <gerdk@svn.gnome.org>

	* data/pointer-capture-applet.glade:
	* data/dwell-click-applet.glade:

	Add more credits to about dialog and update copyright year.
	No doc credits yet - glade doesn't like modifying documenters atm. 

2008-03-27 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/pointer-capture-applet.c: Clean up.
