@@ -43,6 +43,8 @@ struct _MTClosure {
     gint direction;
     gint pointer_x;
     gint pointer_y;
+    gint x_old;
+    gint y_old;
 
     /* options */
     gint     threshold;
